--- a/index.html
+++ b/index.html
@@ -13,22 +13,27 @@
 <body>
     <header> <img src="https://t3.ftcdn.net/jpg/04/51/58/76/360_F_451587634_iVJKobsbjLpbtBY0HTkZ2tzgUVGHfzEU.jpg" class="img-fluid"
             alt="Trulli" /> Tv Series</header>
-    <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th>#</th>
-                <th>Name</th>
-                <th>Channel</th>
-                <th>Seasons</th>
-            </tr>
-        </thead>
-        <tbody id="series"></tbody>
-    </table>
+   <div>
+     <table class="table">
+         <thead class="thead-dark">
+             <tr>
+                 <th>#</th>
+                 <th>Name</th>
+                 <th>Channel</th>
+                 <th>Seasons</th>
+             </tr>
+         </thead>
+         <tbody id="series"></tbody>
+     </table>
+    
+   </div>
+   <div>
+    Seasons average 
+   </div>
 
 
-
-    <script type="module" src="./scripts/course.js"></script>
-    <script type="module" src="./scripts/dataCourses.js"></script>
+    <script type="module" src="./scripts/Serie.js"></script>
+    <script type="module" src="./scripts/data.js"></script>
     <script type="module" src="./scripts/main.js"></script>
 </body>
 
