--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@
      </table>
     
    </div>
-   <div>
-    Seasons average 
-   </div>
+   <p id="average-seasons"></p>
 
 
     <script type="module" src="./scripts/Serie.js"></script>
